[package]
name = "email-utils"
version = "0.1.0"
authors = ["Pablo Deymonnaz <deymonnaz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lettre = { version = "0.9", optional = true }
lettre_email = { version = "0.9", optional = true }
validator = "0.10.1" # para validar estructuras al interpretarlas
validator_derive = "0.10.1"
mailchecker = "3.3.9"
arraystring = { version = "0.3.0", features = ["serde-traits"] }

[features]
sendmail = ["lettre", "lettre_email"]